Fix img and gap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,7 @@ html {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: 300px 150px;
-  gap: 10px;
+  gap: 20px;
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
